Fixed the lines that were not changing color to the right color while toggling from light to dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -244,6 +244,10 @@ option:checked{
     right: 0;
 }
 
+.noun-dark::after {
+  background: #3A3A3A;
+}
+
 .meaning {
     color: #757575;
     margin-bottom: 16px;
@@ -308,6 +312,10 @@ option:checked{
     padding-top: 24px;
 }
 
+.source-container-dark {
+  border-top: 1px solid #3A3A3A;
+}
+
 .source, .source-link {
     font-size: 14px;
 }
@@ -334,6 +342,10 @@ option:checked{
     width: 1px;
     background-color: #e9e9e9;
     border: none;
+}
+
+.hr-dark {
+  background-color: #3A3A3A;
 }
 
 .sans-serif {
